Had to fix items not being aligned because I was overriding my display flex with display none. Just used visibility property instead.

--- a/frontend/src/css/dashboardPage.css
+++ b/frontend/src/css/dashboardPage.css
@@ -19,14 +19,15 @@ body {
 .noContactContainer{
     position: absolute;
     display: flex;
-    display: none;
     flex-direction: column;
     justify-content: center;
-    gap: 1rem;
     align-items: center;
+    gap: 1rem;
     top: 56%;
     left: 50%;
     transform: translate(-50%, -50%);
+    visibility: hidden;
+    pointer-events: none;
 }
 
 .noContactContainer img{
